--- a/cart-me/src/app/components/product/productsupload/productsupload.component.html
+++ b/cart-me/src/app/components/product/productsupload/productsupload.component.html
@@ -12,14 +12,14 @@
 
                         <div class="form-group">
                             <label class="control-label">Chef Name</label>
-                            <input formControlName="ChefName" class="form-control" />
+                            <input formControlName="chefName" class="form-control" />
                             <div class="text-danger">
                                 {{showChefNameErrors()}}
                             </div>
                         </div>
                        <div class="form-group">
                            <label class="control-label"> Meal Name</label>
-                           <input formControlName="MealName" class="form-control" />
+                           <input formControlName="mealName" class="form-control" />
                            <div class="text-danger">
                                {{showMealNameErrors()}}
                            </div>
@@ -27,7 +27,7 @@
 
                        <div class="form-group">
                            <label asp-for="Description" class="control-label"> Description</label>
-                           <textarea formControlName="Description" class="form-control" rows="3"></textarea>
+                           <textarea formControlName="description" class="form-control" rows="3"></textarea>
                            <div class="text-danger">
                                {{showDescriptionErrors()}}
                            </div>
@@ -35,7 +35,7 @@
                         <div class="form-group">
                             <label asp-for="Image" class="control-label">Image File</label>
                                 <div class="custom-file">
-                                    <input type="file" formControlName="Image" class="form-control custom-file-input" id="customfile" />
+                                    <input type="file" formControlName="image" class="form-control custom-file-input" id="customfile" />
                                     <label class="custom-file-label" for="customfile">Choose File</label>
                                 </div>
                                 <div class="text-danger">
@@ -44,14 +44,14 @@
                         </div>
                         <div class="form-group">
                             <label class="control-label">Price</label>
-                            <input formControlName="Price" class="form-control" />
+                            <input formControlName="price" class="form-control" />
                             <div class="text-danger">
                                 {{showPriceErrors()}}
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label">Food Category</label>
-                            <select formControlName="FoodCategory" class="form-control">
+                            <select formControlName="foodCategory" class="form-control">
                                 <option value="0">Choose a Category...</option>
                             </select>
                             <div class="text-danger">
@@ -66,10 +66,7 @@
             </div>
         </div>
         <hr />
-        <div class="text-center">
-            <a asp-action="Index" asp-controller="Products"><strong>BACK</strong></a>
-            <hr class="btn-dark" style="width:300px">
-        </div>
+
     </div>
 </div>
 <router-outlet></router-outlet>
