--- a/cart-me/src/app/components/cart/cart.component.html
+++ b/cart-me/src/app/components/cart/cart.component.html
@@ -3,7 +3,7 @@
     <h1><strong>CART</strong></h1>
 </div>
 <hr />
-<div class="container cartWrapper">
+<div class="container cartWrapper" *ngIf="cartList">
  
     <div class="text-center">
         <table class="table table-borderless table-striped">
@@ -59,6 +59,11 @@
     </div>
 </div>
 
-<div class="text-center">
-    <a class="display-4">Empty Cart</a>
+<div class="text-center" *ngIf="!cartList">
+    <div class="m-2">
+    <a class="display-4">Empty Cart 🙄</a>
+    </div>
+    <div>
+    <p>Hi... Please Search for Meals & order those Tasty Treats!!! 🤪😎😉</p>
+    </div>
 </div>
