--- a/cart-me/src/app/components/category/categories/categories.component.html
+++ b/cart-me/src/app/components/category/categories/categories.component.html
@@ -13,7 +13,7 @@
 <br/>
 <!-- <hr> -->
 
-<div class="text-center container">
+<div class="text-center container" *ngIf="!catList">
     <table class="table table-borderless table-striped">
         <thead>
             <tr>
@@ -40,7 +40,7 @@
 
 
 
-<div class="container shadow p-3">
+<div class="container shadow p-3" *ngIf="dataSource">
 <!-- <mat-form-field appearance="standard">
     <mat-label>Search</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
@@ -91,11 +91,19 @@
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of Categories"></mat-paginator>
 </div>
 </div>
+
+<br />
+<br />
+<div class="text-center" *ngIf="catList">
+    <div class="m-2">
+        <a class="display-4">NO CONTENT 🙄</a>
+    </div>
+   
+</div>
 <br />
 <br />
 <br />
 <br />
-<br />
-<br />
+
 <!-- ###################################################### -->
 <app-footer></app-footer>
