--- a/cart-me/src/app/components/product/product-list/product-list.component.html
+++ b/cart-me/src/app/components/product/product-list/product-list.component.html
@@ -14,7 +14,7 @@
    <div class="row">
     <div class="bd-example bd-example-images m-1 mx-auto" *ngFor="let prod of prodList">
      <div class="text-center">
-      <img src={{prod.image}} class="artwork mb-2" height="120 " width="120" [routerLink]="['/products/product-details',prod.id]"/>
+      <img src="assets/images/Goatmeat.webp" class="artwork mb-2" height="120 " width="120" [routerLink]="['/products/product-details',prod.id]"/>
       <h6 class="text-dark">{{prod.mealName}}</h6>
       <span class="navbar-expand-sm  d-flex mx-auto my-auto justify-content-center">
        <div>
@@ -109,7 +109,7 @@
 <!-- ########################################################### -->
 
 
-<div class="container shadow p-3">
+<div class="container shadow p-3" *ngIf="dataSource">
  <!-- <mat-form-field appearance="standard">
     <mat-label>Search</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
@@ -173,7 +173,7 @@
 <br/>
 <br/>
 
-<div class="text-center container">
+<div class="text-center container" *ngIf="!prodList">
     <table class="table table-borderless table-striped">
         <thead>
             <tr>
@@ -196,6 +196,10 @@
             </tr>
         </tbody>
     </table>
+</div>
+<br/>
+<div class="text-center container" *ngIf="prodList">
+    <h2>NO CONTENT</h2>
 </div>
 <br/>
 <br/>
