--- a/cart-me/src/app/components/category/categories/categories.component.html
+++ b/cart-me/src/app/components/category/categories/categories.component.html
@@ -13,7 +13,7 @@
 <br/>
 <!-- <hr> -->
 
-<div class="text-center container" *ngIf="!catList">
+<div class="text-center container" *ngIf="catList">
     <table class="table table-borderless table-striped">
         <thead>
             <tr>
@@ -94,7 +94,7 @@
 
 <br />
 <br />
-<div class="text-center" *ngIf="catList">
+<div class="text-center" *ngIf="!catList">
     <div class="m-2">
         <a class="display-4">NO CONTENT 🙄</a>
     </div>
