--- a/cart-me/src/app/components/product/productsupload/productsupload.component.html
+++ b/cart-me/src/app/components/product/productsupload/productsupload.component.html
@@ -51,8 +51,9 @@
                         </div>
                         <div class="form-group">
                             <label class="control-label">Food Category</label>
-                            <select formControlName="foodCategory" class="form-control">
+                            <select formControlName="foodCategory" class="form-control" >
                                 <option value="0">Choose a Category...</option>
+                                <option *ngFor="let cat of categoryList" value={{cat.id}}>{{cat.name}}</option>
                             </select>
                             <div class="text-danger">
                                 {{showFoodCategoryErrors()}}
