--- a/cart-me/src/app/components/product/productsupload/productsupload.component.html
+++ b/cart-me/src/app/components/product/productsupload/productsupload.component.html
@@ -35,7 +35,7 @@
                         <div class="form-group">
                             <label asp-for="Image" class="control-label">Image File</label>
                                 <div class="custom-file">
-                                    <input type="file" formControlName="image" class="form-control custom-file-input" id="customfile" />
+                                    <input type="file" formControlName="imageUpload" class="form-control custom-file-input" id="customfile" />
                                     <label class="custom-file-label" for="customfile">Choose File</label>
                                 </div>
                                 <div class="text-danger">
