--- a/cart-me/src/app/components/product/products-edit/products-edit.component.html
+++ b/cart-me/src/app/components/product/products-edit/products-edit.component.html
@@ -55,9 +55,10 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label  class="control-label">FoodCategory</label>
+                    <label class="control-label">Food Category</label>
                     <select formControlName="foodCategory" class="form-control">
                         <option value="0">Choose a Category...</option>
+                        <option *ngFor="let cat of categoryList" value={{cat.id}}>{{cat.name}}</option>
                     </select>
                     <div class="text-danger">
                         {{showFoodCategoryErrors()}}
