--- a/cart-me/src/app/components/header/header.component.html
+++ b/cart-me/src/app/components/header/header.component.html
@@ -39,7 +39,7 @@
                     <li class="nav-item li">
                         <a class="nav-link text-dark " [routerLink]="[ '/contact'] " routerLinkActive="router-link-active "><strong>CONTACT</strong></a>
                     </li>
-                    <li class="nav-item li">
+                    <li class="nav-item li" *ngIf="checkLoggedIn()">
                         <a class="nav-link  text-dark " [routerLink]="[ '/admin']" routerLinkActive="router-link-active"><strong>ADMIN</strong></a>
                     </li>
                     <li class="nav-item li" *ngIf="checkLoggedIn()">
