--- a/cart-me/src/app/components/cart/cart.component.html
+++ b/cart-me/src/app/components/cart/cart.component.html
@@ -17,13 +17,13 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr *ngFor="let list of cartList">
                     <td> EMPTY </td>
                     <td> 0</td>
                     <td>
-                        <a asp-action="AddToCart" asp-controller="Cart" asp-route-id="@item." class="btn btn-primary btn-sm">+</a> |
-                        <a asp-action="DecreaseFromCart" asp-controller="Cart" asp-route-id="@item." class="btn btn-success btn-sm">-</a> |
-                        <a asp-action="DeleteFromCart" asp-controller="Cart" asp-route-id="@item." class="btn btn-danger btn-sm">
+                        <a class="btn btn-primary btn-sm" (click)="increase()">+</a> |
+                        <a class="btn btn-success btn-sm" (click)="decrease()">-</a> |
+                        <button  (click)="removeItem(list)"class="btn btn-danger btn-sm">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                                     <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1
                                       .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
@@ -31,7 +31,7 @@
                                       1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0
                                       1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
                                 </svg>
-                        </a>
+                        </button>
                     </td>
                     <td> $0.00</td>
                     <td> $0.00</td>
@@ -51,8 +51,8 @@
             <tr>
 
                 <td class="text-right" colspan="4">
-                    <a asp-action="ClearCart" asp-controller="Cart" class="btn btn-warning btn-sm">CLEAR CART</a> |
-                    <a asp-action="CheckOut" href="#" asp-controller="Cart" class="btn btn-primary btn-sm">CHECKOUT</a>
+                    <a asp-action="ClearCart" asp-controller="Cart" class="btn btn-warning btn-sm" (click)="clearCartItems()">CLEAR CART</a> |
+                    <a asp-action="CheckOut" href="#" asp-controller="Cart" class="btn btn-primary btn-sm" (click)="checkout()">CHECKOUT</a>
                 </td>
             </tr>
         </table>
