--- a/cart-me/src/app/components/category/categories/categories.component.html
+++ b/cart-me/src/app/components/category/categories/categories.component.html
@@ -40,7 +40,7 @@
 
 
 
-<div class="container shadow p-3" *ngIf="dataSource">
+<div class="container shadow p-3" >
 <!-- <mat-form-field appearance="standard">
     <mat-label>Search</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
