--- a/cart-me/src/app/components/product/product-list/product-list.component.html
+++ b/cart-me/src/app/components/product/product-list/product-list.component.html
@@ -1,9 +1,11 @@
 <br>
 <div class="container">
 <div class="text-center">
- <p>
-  <a class="btn btn-primary" style="width: 300px;" [routerLink]="[ '/products/uploadproduct']">Create New Product</a>
- </p>
+    <!-- <ng-template > -->
+        <p>
+            <a class="btn btn-primary" style="width: 300px;" [routerLink]="[ '/products/uploadproduct']">Create New Product</a>
+        </p>
+    <!-- </ng-template> -->
 </div>
 
  <br>
