--- a/cart-me/src/app/components/account/register/register.component.html
+++ b/cart-me/src/app/components/account/register/register.component.html
@@ -132,6 +132,6 @@
 <br>
 <br>
 <hr class="btn-info " />
-
+<router-outlet></router-outlet>
 
 <!-- ############################################ -->
