--- a/cart-me/src/app/components/footer/footer.component.html
+++ b/cart-me/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid general-height shadow-lg" >
+<div class="container-fluid general-height shadow-lg mt-5">
         <div class="row container-fluid subscribe" >
             <div class="col-md-5 md-auto shift">
                 <hr class="btn-light" />
@@ -53,4 +53,3 @@
 <!-- <br> -->
 
 
-<router-outlet></router-outlet>
