--- a/cart-me/src/app/app.component.html
+++ b/cart-me/src/app/app.component.html
@@ -1,7 +1,16 @@
 <div class="container-fluid all">
     <div>
         <app-header></app-header>
-        <router-outlet></router-outlet>
+        
     <!-- <app-loading-spinner></app-loading-spinner> -->
     </div>
+
+    <div>
+    <router-outlet></router-outlet>
+    </div>
+
+    <div>
+        <app-footer></app-footer>
+    </div>
+    
 </div>
