--- a/cart-me/src/app/components/category/categories/categories.component.html
+++ b/cart-me/src/app/components/category/categories/categories.component.html
@@ -106,4 +106,4 @@
 <br />
 
 <!-- ###################################################### -->
-<!-- <app-footer></app-footer> -->
+<router-outlet></router-outlet>
