--- a/cart-me/src/app/components/product/product-list/product-list.component.html
+++ b/cart-me/src/app/components/product/product-list/product-list.component.html
@@ -211,5 +211,5 @@
 <br/>
 <br />
 <br />
+<router-outlet></router-outlet>
 <!-- ###################################################### -->
-<app-footer></app-footer>
