--- a/cart-me/src/app/app.component.html
+++ b/cart-me/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid all">
     <div>
         <app-header></app-header>
-        
-    <!-- <app-loading-spinner></app-loading-spinner> -->
     </div>
 
     <div>
     <router-outlet></router-outlet>
+    <app-loading-spinner *ngIf="showLoading | async"></app-loading-spinner>
+
     </div>
 
     <div>
