--- a/cart-me/src/app/components/account/email-confirm/email-confirm.component.css
+++ b/cart-me/src/app/components/account/email-confirm/email-confirm.component.css
@@ -12,7 +12,7 @@
   justify-content: center;
 }
 .artwork-image {
-  background-image: url("../../../../assets/images/signup.jpg");
+  /* background-image: url("assets/images/signup.jpg"); */
   max-width: 340px;
   width: 100%;
   height: 370px;
