--- a/cart-me/src/app/components/account/login/login.component.html
+++ b/cart-me/src/app/components/account/login/login.component.html
@@ -27,7 +27,7 @@
                     <a [routerLink]="[ '/forgotpassword'] " routerLinkActive="router-link-active ">Forgot Password?</a>
                 </div>
                 <div>
-                    <button mat-fab-button class="btn btn-default " [routerLink]="[ '/register'] " routerLinkActive="router-link-active ">
+                    <button mat-fab-button class="btn btn-default " [routerLink]="[ '/users/register'] " routerLinkActive="router-link-active ">
                             <strong>
                                 Dont have an Account?
                             </strong>
