--- a/cart-me/src/app/components/account/register/register.component.html
+++ b/cart-me/src/app/components/account/register/register.component.html
@@ -115,7 +115,7 @@
             </div>
             <br>
             
-            <button class="btn btn-default " [routerLink]="[ '/login']" routerLinkActive="router-link-active ">
+            <button class="btn btn-default " [routerLink]="[ '/users/login']" routerLinkActive="router-link-active ">
                 <strong>
                     Already have an Account?
                 </strong>
