--- a/cart-me/src/app/components/account/login/login.component.html
+++ b/cart-me/src/app/components/account/login/login.component.html
@@ -14,8 +14,22 @@
                 <div class="form-group">
                     <input placeholder="Email" type="email" class="form-control" name="Email" #Email="ngModel" [(ngModel)]="formModel.Email" required>
                 </div>
+                <div class="text-danger">
+                    <div *ngIf="Email.touched && !Email.valid">
+                        <div *ngIf="Email.errors?.required">
+                            Email is Required😑
+                        </div>
+                    </div>
+                </div>
                 <div class="form-group">
                     <input placeholder="Password" type="password" class="form-control" name="password" #Password="ngModel" [(ngModel)]="formModel.Password" required>
+                </div>
+                <div class="text-danger">
+                   <div *ngIf="Password.touched && !Password.valid">
+                       <div *ngIf="Password.errors?.required">
+                           Password is Required😑
+                       </div>
+                   </div>
                 </div>
                 <hr>
                 <div>
