--- a/cart-me/src/app/components/account/user-create/user-create.component.html
+++ b/cart-me/src/app/components/account/user-create/user-create.component.html
@@ -15,9 +15,18 @@
    <div class="col-md-6 mx-auto">
     <form asp-action="Register" #form="ngForm" (submit)="OnSubmit(form)">
      <div class="form-group">
-      <input type="text" [(ngModel)]="formModel.firstname" placeholder="Firstname" name="firstname" #firstname="ngModel" class="form-control" />
+      <input type="text" [(ngModel)]="formModel.firstname" placeholder="Firstname" name="firstname" #firstname="ngModel" class="form-control" maxlength="20"/>
       <div class="text-danger">
-       <!-- {{shoeFirstNameErrors()}} -->
+         <div class="text-danger">
+          <div *ngIf="firstname.touched && !firstname.valid">
+           <div *ngIf="firstname.errors?.required">
+            Firstname is Required😑
+           </div>
+           <div *ngIf="firstname.errors?.maxlength">
+            Firstname must not exceed 20 characters😑
+           </div>
+          </div>
+         </div>
       </div>
      </div>
      <div class="form-group">
@@ -89,7 +98,7 @@
       </div>
      </div>
 
-     <div formGroupName="Passwords">
+     <div ngModelGroup="Passwords" #Passwords="ngModelGroup">
       <div class="form-group row">
        <div class="col-md-12">
         <input type="password" [(ngModel)]="formModel.Password" placeholder="Password" name="Password" #Password="ngModel" class="form-control" />
@@ -109,8 +118,8 @@
       </div>
      </div>
 
-     <div class="form-group">
-      <button type="submit" value="Create" class="btn btn-primary text-white"><strong>SUBMIT</strong>
+     <div class="form-group" >
+      <button type="submit" value="Create" class="btn btn-primary text-white" [disabled]="!form.valid"><strong>SUBMIT</strong>
       </button>
      </div>
      <br>
