--- a/cart-me/src/app/components/category/upload-category/upload-category.component.html
+++ b/cart-me/src/app/components/category/upload-category/upload-category.component.html
@@ -14,6 +14,10 @@
                         <input type="text" class="form-control text-center justify-content-center" placeholder = "Enter Category"
                         formControlName="name" name="name">
                     </div>
+                    <div class="form-group">
+                        <textarea [readonly]="NonEditable" type="text" class="form-control text-center justify-content-center" placeholder = "Description"
+                        formControlName="name" name="name"></textarea>
+                    </div>
                     <div class="text-danger">
                          {{showCategoryNameErrors()}}
                     </div>
