--- a/cart-me/src/app/components/home/home.component.html
+++ b/cart-me/src/app/components/home/home.component.html
@@ -417,6 +417,7 @@
 <hr class="btn-info " />
 
     <button
+    class="btn btn-primary small btn-sm border-0 d-inline-flex p-1 pt-2 pb-md-2 pl-md-2 pr-md-2"
     angular4-paystack
     [paystackOptions]="options"
     (paymentInit)="paymentInit()"
