--- a/cart-me/src/app/components/category/categories/categories.component.html
+++ b/cart-me/src/app/components/category/categories/categories.component.html
@@ -8,10 +8,17 @@
     <p>
         <a class="btn btn-primary" style="width: 300px;" [routerLink]="[ '/categories/uploadcategory']">Create New</a>
     </p>
+    <!-- <input (input)="openIt($event)"  />
+
+    <ng-template>
+<h6 [hidden]="displayThisBool" >{{displayThis}}</h6>
+    </ng-template> -->
+    
 </div>
 <hr/>
 <br/>
 <!-- <hr> -->
+
 
 <div class="text-center container" *ngIf="catList.length">
     <table class="table table-borderless table-striped">
