--- a/cart-me/src/app/components/Chats/Chats.component.html
+++ b/cart-me/src/app/components/Chats/Chats.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="offers.length>0" class="alert alert-warning" role="alert">
+<!-- <div *ngIf="offers.length>0" class="alert alert-warning" role="alert">
     <li *ngFor="let item of offers">
       Offers: {{item}}
     </li>
-</div>
+</div> -->
