--- a/cart-me/src/app/components/search/search.component.html
+++ b/cart-me/src/app/components/search/search.component.html
@@ -1,6 +1,6 @@
 <div class="col-sm-12 container Searchcontainer">
     <form class=" serach-form col-md-7 d-flex" method="post" form="Ngform">
-        <input class="search-input mb-2 pl-2 w-100 " name="search" placeholder="Search For Meal..." ngModel>
+        <input class="search-input mb-2 pl-2 w-100 " name="search" placeholder="Search For Meal..." [(ngModel)] ="searchList">
         <button class="searchbtn" onclick="onSubmit(form)"><strong>SEARCH</strong></button>
     </form>
 </div>
