--- a/cart-me/src/app/components/category/upload-category/upload-category.component.html
+++ b/cart-me/src/app/components/category/upload-category/upload-category.component.html
@@ -4,7 +4,7 @@
     <h2><strong>CREATE CATEGORY</strong></h2>
 </div>
 <hr />
-<div class="text-center">
+<div class="text-center" id="displayBody">
     <div class="row">
         <div class="col-sm-6 mx-auto">
             <div class="text-center p-3">
