--- a/cart-me/src/app/components/home/home.component.html
+++ b/cart-me/src/app/components/home/home.component.html
@@ -114,32 +114,15 @@
         <div class="text-center ">
             <img src="assets/images/Devillechicken.jpg " class="artwork pb-2" height="120 " width="120 ">
             <h6 class="">CHICKEN & CHIPS</h6>
-            <!-- <span class="navbar-expand-sm d-flex d-block d d-inline-flex mx-auto my-auto">
+            <span class="navbar-expand-sm d-flex d-block d d-inline-flex mx-auto my-auto">
                 <div> <h5 class=" btn btn-outline-primary btn-sm">$12</h5></div>
                 <div>
                    <button class="btn btn-primary small btn-sm border-0 d-inline-flex p-1 pt-2" id="addtocarttext">
                   <strong> CART</strong>
                 </button>
                 </div>
-            </span> -->
-            <div class="content">
-                 <div> <h5 class=" btn btn-outline-primary btn-sm">$12</h5></div>
-                 <div>
-                  <button class="btn btn-primary small btn-sm border-0 d-inline-flex p-1 pt-2" id="addtocarttext">
-                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-                       <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                     </svg>
-                     <strong> CART</strong>
-                  </button>
-
-                  <button class="btn btn-primary small btn-sm border-0 d-inline-flex p-1 pt-2" id="addtocarttext">
-                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash" viewBox="0 0 16 16">
-  <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
-</svg><strong> CART</strong>
-                  </button>
-
-                 </div>
-            </div>
+            </span>
+   
 
         </div>
     </div>
