--- a/cart-me/src/app/components/header/header.component.html
+++ b/cart-me/src/app/components/header/header.component.html
@@ -23,7 +23,6 @@
                     <li class="nav-item li" *ngIf="!checkLoggedIn()">
                         <a class="nav-link  text-dark " [routerLink]="[ '/users/login']" routerLinkActive="router-link-active "><strong>LOGIN</strong></a>
                     </li>
-
                     <li class="nav-item ">
                         <a class="nav-link  text-dark " [routerLink]="[ '/cart'] " routerLinkActive="router-link-active "><strong>CART</strong></a>
                     </li>
@@ -31,7 +30,7 @@
                         <a class="nav-link  text-dark " [routerLink]="[ '/categories'] " routerLinkActive="router-link-active "><strong>CATEGORIES</strong></a>
                     </li>
                     <li class="nav-item li">
-                        <a class="nav-link  text-dark " [routerLink]="[ '/products'] " routerLinkActive="router-link-active "><strong>KITCHEN</strong></a>
+                        <a class="nav-link  text-dark " [routerLink]="[ '/products'] " routerLinkActive="router-link-active "><strong>PRODUCTS</strong></a>
                     </li>
                     <li class="nav-item li">
                         <a class="nav-link  text-dark " [routerLink]="[ '/about']" routerLinkActive="router-link-active "><strong>ABOUT</strong></a>
