--- a/cart-me/src/app/components/home/home.component.html
+++ b/cart-me/src/app/components/home/home.component.html
@@ -74,6 +74,8 @@
 <div>
     <hr class="my-4 " />
 </div>
+<!-- <a (click)="goToLink('print')">print</a> -->
+<!-- <a href="www.example.com" target="_blank">print</a> -->
 <!-- @*#############################################################################*@ -->
 
 <div class="col-sm-12 container ">
