--- a/cart-me/src/app/components/header/header.component.html
+++ b/cart-me/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
 <header class="header">
     <nav class="navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow text-center">
         <div class="w-100 d-inline-block container-fluid pt-3 my-auto mx-auto">
-            <div class="col-sm-6 mx-auto">
+            <div class="col-sm-6 mx-auto d-flex">
                 <a class="navbar-brand text-center w-100 pb-2"><strong>CART-ME</strong></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
